deployment.yaml
# FinBrain Project - deployment.yaml - MIT License (c) 2025 Nadav Eshed


apiVersion: apps/v1
kind: Deployment
metadata:
  name: finbrain-backend-deployment # The name of this Deployment in Kubernetes
  namespace: default # The namespace where the app will run 

spec:
  replicas: 2 # Run 2 copies of the Flask app for high availability
  selector:
    matchLabels:
      app: finbrain-backend # This selects the pods that this Deployment will manage

  template:
    metadata:
      labels:
        app: finbrain-backend # Each pod created will be labeled with 'app: finbrain-backend'

    spec:
      serviceAccountName: finbrain-sa # This ServiceAccount has IAM permissions to read secrets from AWS

      containers:
      - name: finbrain-backend
        image: 832871077677.dkr.ecr.eu-central-1.amazonaws.com/finbrain-backend:latest # Pull image from ECR
        imagePullPolicy: Always # Always pull the latest image version
        ports:
        - containerPort: 5000 # Flask runs on port 5000 inside the container

        # Environment variable (points to a file that contains the secret value)
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store" # This is the directory inside the container where secrets will appear
          readOnly: true # Make the secrets read-only for safety

      # Define the volume that will be mounted (volume = directory inside the container where secrets will appear)
      volumes:
      - name: secrets-store
        csi: # This tells Kubernetes to use the CSI driver (Secrets Store Plugin)
          driver: secrets-store.csi.k8s.io # This is the official driver for secrets-store
          readOnly: true
          volumeAttributes:
            secretProviderClass: finbrain-secrets-provider # This tells which SecretProviderClass to use
